--- a/kgdc/index.html
+++ b/kgdc/index.html
@@ -1,1 +1,18 @@
-kgdc
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico">
+    <title>Survey of India</title>
+</head>
+<body>
+    <div style='text-align:center;border: 2px solid grey;'>
+        <img alt='Survey of India' src='https://ruphil.github.io/file-host-permanent/logosoi.png' width='100'/>
+        <h3 style='color:green;'>Karnataka Geospatial Data Centre <br/> Survey of India</h3><br/>
+        <b>Enter</b><br/>
+        <a href="http://59.88.201.244"><h4><b>SOI - GIS Karnataka</b></h4></a><br/>
+    </div>
+</body>
+</html>
