--- a/kgdc/index.html
+++ b/kgdc/index.html
@@ -8,9 +8,9 @@
     <title>Survey of India</title>
 </head>
 <body>
-    <div style='text-align:center;border: 2px solid grey;'>
-        <img alt='Survey of India' src='https://ruphil.github.io/file-host-permanent/logosoi.png' width='100'/>
-        <h3 style='color:green;'>Karnataka Geospatial Data Centre <br/> Survey of India</h3><br/>
+    <div style="text-align:center;border: 2px solid grey;">
+        <img alt="Survey of India" src="logosoi.png" width="100"/>
+        <h3 style="color:green;">Karnataka Geospatial Data Centre <br/> Survey of India</h3><br/>
         <b>Enter</b><br/>
         <a href="http://59.88.201.244"><h4><b>SOI - GIS Karnataka</b></h4></a><br/>
     </div>
